--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -28,24 +28,6 @@ p.main {
     z-index: 2000;
 }
 
-#previousButton {
-  text-decoration: none;
-  display: inline-block;
-  padding: 8px 16px;
-  background-color: #f1f1f1;
-  color: black;
-  border: none;
-}
-
-#nextButton {
-  background-color: #4CAF50;
-  color: white;
-  text-decoration: none;
-  display: inline-block;
-  padding: 8px 16px;
-  border: none;
-}
-
 .legend {
   position: absolute;
   top: 12px;
@@ -83,6 +65,7 @@ p.main {
 
 .slidecontainer {
   width: 100%; /* Width of the outside container */
+  margin-top: 20px;
 }
 
 .slider {
@@ -118,4 +101,59 @@ p.main {
   height: 25px; /* Slider handle height */
   background: #4CAF50; /* Green background */
   cursor: pointer; /* Cursor on hover */
+}
+
+.switch {
+  position: relative;
+  display: inline-block;
+  width: 40px;
+  height: 34px;
+}
+
+.switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider.toggle {
+  position: absolute;
+  cursor: pointer;
+  border-radius: 34px;
+  height: 23px;
+  top: 5px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: #ccc;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+.slider.toggle:before {
+  position: absolute;
+  content: "";
+  height: 15px;
+  width: 15px;
+  border-radius: 50%;
+  left: 4px;
+  bottom: 4px;
+  background-color: white;
+  -webkit-transition: .4s;
+  transition: .4s;
+}
+
+input:checked + .slider.toggle {
+  background-color: #2196F3;
+}
+
+input:focus + .slider.toggle {
+  box-shadow: 0 0 1px #2196F3;
+}
+
+
+input:checked + .slider:before {
+  -webkit-transform: translateX(15px);
+  -ms-transform: translateX(15px);
+  transform: translateX(17px);
 }
