--- a/Project/css/style.css
+++ b/Project/css/style.css
@@ -28,41 +28,6 @@ p.main {
     z-index: 2000;
 }
 
-.legend {
-  position: absolute;
-  top: 12px;
-  left: 460px;
-  z-index: 2000;
-}
-
-.legend-title {
-  font: Verdana, sans-serif;
-  font-size: 20px;
-  font-weight: bold;
-  font-variant: small-caps;
-}
-
-.legend-scale ul {
-   margin-left: 3px;
-   margin-top: 5px;
-   margin-bottom: 5px;
-   padding: 0;
-   float: left;
-   list-style: none;
-   font: Verdana, sans-serif;
-   font-size: 16px;
-   font-variant: small-caps;
-   }
-
-.legend ul.legend-labels li span {
-    display: block;
-    float: left;
-    height: 16px;
-    width: 30px;
-    margin-right: 5px;
-    margin-left: 0;
-    }
-
 .slidecontainer {
   width: 100%; /* Width of the outside container */
   margin-top: 20px;
@@ -81,6 +46,21 @@ p.main {
   transition: opacity .2s;
 }
 
+.weight {
+  display: inline-block;
+  width: 15%;
+  height: 10px
+}
+
+.slider.weight::-webkit-slider-thumb {
+  -webkit-appearance: none; /* Override default look */
+  appearance: none;
+  width: 15px; /* Set a specific slider handle width */
+  height: 15px; /* Slider handle height */
+  border-radius: 50px;
+  background: #4CAF50; /* Green background */
+  cursor: pointer; /* Cursor on hover */
+}
 
 .slider:hover {
   opacity: 1; /* Fully shown on mouse-over */
@@ -156,4 +136,27 @@ input:checked + .slider:before {
   -webkit-transform: translateX(15px);
   -ms-transform: translateX(15px);
   transform: translateX(17px);
+}
+
+.legend {
+  left: 100px;
+  position:absolute;
+  border-radius: 3px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
+  font: 15px/30px 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  padding: 10px;
+  z-index: 1;
+}
+
+.legend h4 {
+  margin: 0 0 5px;
+  font-size: 25px
+}
+
+.legend div span {
+  border-radius: 50%;
+  display: inline-block;
+  height: 20px;
+  margin-right: 5px;
+  width: 20px;
 }
